# profiling_python

./: LICENSE  README.md  pyproject.toml
scripts/: run_debug_demo.py  run_demo.py  run_pyspy_demo.py  run_timeit.py
src/simpleprofile/: __init__.py
tests/: test_search.py
